working on livereload

--- a/public/contact.html
+++ b/public/contact.html
@@ -18,6 +18,11 @@
 
     <!-- build:js js/vendor.min.js -->
       <!-- bower:js -->
+      <script src="../bower_components/jquery/dist/jquery.js"></script>
+      <script src="../bower_components/lodash/lodash.js"></script>
+      <script src="../bower_components/firebase/firebase.js"></script>
+      <script src="../bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
+      <script src="../bower_components/moment/moment.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
